Optimize auto configuration code .